[gd_scene load_steps=7 format=3 uid="uid://bko7av538q6rj"]

[ext_resource type="Texture2D" uid="uid://cahr73ue3ux1k" path="res://assets/background (1).png" id="1_5xk3e"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_hm85s"]
[ext_resource type="PackedScene" uid="uid://c73snhxb3xixd" path="res://scenes/player.tscn" id="2_rtpdh"]
[ext_resource type="PackedScene" uid="uid://cnkwndigw02ob" path="res://scenes/boss.tscn" id="3_lb4p6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jposa"]
bg_color = Color(0.815686, 0.494118, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5scoe"]
bg_color = Color(1, 0.62783, 0.148016, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_hm85s")

[node name="Background(1)" type="Sprite2D" parent="."]
position = Vector2(576.5, 323.5)
scale = Vector2(0.602604, 0.606481)
texture = ExtResource("1_5xk3e")

[node name="Player" parent="." instance=ExtResource("2_rtpdh")]
position = Vector2(286, 497)

[node name="Boss" parent="." instance=ExtResource("3_lb4p6")]
position = Vector2(806, 522)
scale = Vector2(0.8, 0.8)

[node name="Button" type="Button" parent="."]
offset_left = 48.0
offset_top = 528.0
offset_right = 285.0
offset_bottom = 584.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jposa")
theme_override_styles/hover = SubResource("StyleBoxFlat_5scoe")
text = "SLASH (5 DMG)"

[node name="Button2" type="Button" parent="."]
offset_left = 314.0
offset_top = 527.0
offset_right = 551.0
offset_bottom = 583.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jposa")
theme_override_styles/hover = SubResource("StyleBoxFlat_5scoe")
text = "FIREBALL (15 DMG)"

[node name="Button3" type="Button" parent="."]
offset_left = 580.0
offset_top = 526.0
offset_right = 817.0
offset_bottom = 582.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jposa")
theme_override_styles/hover = SubResource("StyleBoxFlat_5scoe")
text = "HEAL (+10 HP)"

[node name="Button4" type="Button" parent="."]
offset_left = 843.0
offset_top = 524.0
offset_right = 1080.0
offset_bottom = 580.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jposa")
theme_override_styles/hover = SubResource("StyleBoxFlat_5scoe")
text = "Full Mana"

[node name="Timer" type="Timer" parent="."]

[node name="TurnLabel" type="Label" parent="."]
offset_left = 305.0
offset_top = 48.0
offset_right = 854.0
offset_bottom = 118.0
theme_override_font_sizes/font_size = 60
text = "YOUR TURN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -17.0
offset_top = -11.0
offset_right = 1164.0
offset_bottom = 662.0
color = Color(0.411765, 0.411765, 0.411765, 0.772549)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 403.0
offset_top = 237.0
offset_right = 805.0
offset_bottom = 333.0
theme_override_font_sizes/font_size = 70
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 478.0
offset_top = 344.0
offset_right = 728.0
offset_bottom = 416.0
text = "RESTART"

[node name="BackToMM" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 479.0
offset_top = 432.0
offset_right = 729.0
offset_bottom = 504.0
text = "MAIN MENU"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="ColorRect/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="ColorRect/BackToMM" to="." method="_on_back_to_mm_pressed"]
